...
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Add Ingredients Icon -->
    <ImageView
        android:id="@+id/addIngredientsButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/add_ingredients"
        android:src="@drawable/upload_icon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchIngredientsButton" />

    <!-- Search Ingredients Icon -->
    <ImageView
        android:id="@+id/searchIngredientsButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
...
