...
        android:layout_height="24dp"
        android:contentDescription="@string/upload_recipe"
        android:src="@drawable/upload_icon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchRecipesButton" />

    <!-- Search Recipes Icon -->
    <ImageView
        android:id="@+id/searchRecipesButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
...
